# dysh

./: .coveragerc  .docstr.yaml  .editorconfig  .env.template  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FAILED_OPTIMIZATION_ATTEMPTS.md  LICENSE  README.md  Untitled.ipynb  configure  configure.ac  dysh_start.sh.in  dyshscratch.ipynb  ifnum_issue.ipynb  perfenhance_plan.md  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_dev_3.8.txt  revisedstructure.py  s1d.py  sdfitsload.py  setup.py  subbeamnod.ipynb  test_lazy_flags_bigfile.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml  ci-latest-deps.yml  ci.yml  hatch-and-pytest.yml  pre-commit.yml  pyinstaller.yml  python-package.yml  release-test.yml  release.yml  test_workflow.yml  testworkflow.yml
attic/: sdfitsload.py  test_s1d.py
benchmark/: README.md  bench_calibration.py  bench_datawrite.py  bench_dysh.sh  bench_edge.py  bench_gbtfitsload.py  bench_getps.pro  bench_getps.py  bench_lazyflag.py  bench_mapreduce.py  bench_numpy.py  bench_otf.py  bench_partial_loading.py  bench_sdmath.py  bench_skel.py  bench_utils.py  benchmark_py.csh  fitbench.py  fitsio_handles.md  makeplots.py  perf_skel.py  printbench.py  revisedstructure.py  runbench.sh  stats-wcs-meta.2022-03-31-OMP=1  stats-wcs-meta.2022-04-02-OMPunset  tab.out  tab_gbtidl.out  tab_newton.out  tab_newton_linearlsq.out  tab_omp=1.out  tab_omp_unset.out  test_lazy_flags_bigfile.py
benchmark/predevelopment/: benchmark_py.csh  makeplots.py  stats-wcs-meta.2022-04-02-OMPunset  tab.out  tab_gbtidl.out  tab_newton.out  tab_omp=1.out  tab_omp_unset.out
benchmark/q10stats/: create_load_table  dfperf.py  diff  diff2  getps_bench.profile  getps_bench.profile.time  getps_bench_ta.profile  getps_bench_ta.profile.time  loadtimes_after  multibighuge.profile  multibighuge.profile.skipflags  multibighuge.profile.skipflags.time  multibighuge.profile.time  multihugesmall.profile  multihugesmall.profile.skipflags  multihugesmall.profile.skipflags.time  multihugesmall.profile.time  multismallbig.profile  multismallbig.profile.skipflags  multismallbig.profile.skipflags.time  multismallbig.profile.time  multismallsmall.profile  multismallsmall.profile.skipflags  multismallsmall.profile.skipflags.time  multismallsmall.profile.time  runavg.py  runbenchQ10.sh
benchmark/q12stats/: multibighuge.profile.skipflags  multibighuge.profile.skipflags.useindex  multihugesmall.profile.skipflags  multihugesmall.profile.skipflags.useindex  multismallbig.profile.skipflags  multismallbig.profile.skipflags.useindex  multismallsmall.profile.skipflags  multismallsmall.profile.skipflags.useindex  runavg.py  runbenchQ12.sh
benchmark/q8stats/: README.md  datawrite.tab  getotf_bench.profile  getotf_bench.profile.time  getotf_bench_big.profile  getotf_bench_big.profile.time  getps_bench.profile  getps_bench.profile.time  getps_bench_ta.profile  getps_bench_ta.profile.time  loadtimes_before  multibighuge.profile  multibighuge.profile.skipflags  multibighuge.profile.skipflags.time  multibighuge.profile.time  multihugesmall.profile  multihugesmall.profile.skipflags  multihugesmall.profile.skipflags.time  multihugesmall.profile.time  multismallbig.profile  multismallbig.profile.skipflags  multismallbig.profile.skipflags.time  multismallbig.profile.time  multismallsmall.profile  multismallsmall.profile.skipflags  multismallsmall.profile.skipflags.time  multismallsmall.profile.time  plotdatawrite.py  runbenchQ8.sh  sbwrite_bench.profile
benchmark/workflows/: README.md  run_bench.py
conf/: gaincorrection.tab
docs/: .env.template  Makefile  conf.py  dysh.fits.rst  dysh.sdfitsload.rst  dysh.spectra.rst  dysh.util.rst  example.rst  index.rst  install.rst  install_developer.md  performance.rst  positionswitch.rst  requirements.txt  subbeamnod.rst  totalpower.rst
docs/source/: conf.py  examples  glossary.rst  index.rst  prepare_nb.py
dysh-gbtidl-bench/: run_bench.py
gui/: __init__.py  app.py  core.py  dataload.py  file_finder.py  main.py  messages.py  settings.py
gui/sdfake/: maps.py  sdfake.py  sensitivity_calc.py  widgets.py
gui/util/: core.py  dataload.py
gui/widgets/: QIPython.py  __init__.py  graphs.py  layouts.py  splash.py  tables.py
jupyter_cache/: global.db
notebooks/: compare_ps_with_weights.ipynb  getps_dysh_vs_gbtidl.ipynb  subbeamnod.ipynb  test_sdfits.ipynb  test_spectra.ipynb  test_subbeamnod.ipynb
notebooks/developer/: README.md  compare_ps_with_weights.ipynb  extract_blanked_rows.ipynb  extract_rows_for_testdata.ipynb  frequency_axis.ipynb  getps_dysh_vs_gbtidl.ipynb  proto_getfs.ipynb  proto_getfs.py  sdmath.ipynb  staff_training.ipynb  test_OffOn.ipynb  test_ScanBlock.ipynb  test_bunit.py  test_dysh_data.py  test_edge.py  test_getps_exposure.ipynb  test_getps_selection.ipynb  test_gettp_exposure.ipynb  test_multifits.ipynb  test_nodding.py  test_online.py  test_otf.py  test_sdfits.ipynb  test_sdfits_summary.py  test_selection.ipynb  test_smoothing.py  test_specplot.ipynb  test_spectra.ipynb  test_spectral_alignment.py  test_subbeamnod.ipynb  test_timeaverage_with_NaNs.ipynb  test_vane.py  test_vane2.ipynb
notebooks/examples/: AAAREADME.ipynb  README.ipynb  README.md  align_spectra.ipynb  apeff_surferr.ipynb  calseq.ipynb  custom_baseline.ipynb  dataIO.ipynb  flagging.ipynb  flagging_selection.ipynb  frequencyswitch.ipynb  gauss_fit.ipynb  hi_survey.ipynb  index.rst  line_search.ipynb  merge_sdfits.ipynb  metadata_management.ipynb  multiplefiles.ipynb  nodding.ipynb  on_the_fly.ipynb  onoff-L_gettp_156_intnum_0_HEL.ascii  positionswitch-test.ipynb  positionswitch.ipynb  quality.ipynb  repeated_scans.ipynb  selection.ipynb  smoothing.ipynb  stakeholders-demo.ipynb  subbeamnod.ipynb  using_spectral_weights.ipynb  vane.ipynb  velocity_frames.ipynb  w-band.ipynb
scripts/: makegbtline.py
testdata/: README.md  extract_rows.py  gshift_box.fits
tests/: __init__.py  hello-world.py  test_HelloWorld.py  test_astrodysh.py
threading/: dev  dev.cpp
(+638 files in other folders)
